--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "Rubik";
+  src: url("fonts/Rubik-VariableFont.ttf");
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Rubik";
+}
