--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 25px 0px 111px 0px;
+  position: relative;
 }
 .heading {
   font-size: 27px;
@@ -29,4 +30,36 @@
   background-color: black;
   padding: 18px 20px;
   border-radius: 0px 10px 10px 0px;
+}
+.address-container {
+  color: black;
+  background-color: white;
+  display: flex;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -28%;
+  font-family: "Rubik";
+  padding: 30px 0px;
+  border-radius: 15px;
+}
+.address {
+  padding: 0px 49px 0px 27px;
+  width: 165px;
+}
+.title {
+  font-size: 10px;
+  font-weight: 700;
+  opacity: 0.5;
+  padding-bottom: 12px;
+  letter-spacing: 2px;
+}
+.data {
+  font-size: 22px;
+  font-weight: 600;
+}
+.border-left {
+  width: 0.1px;
+  background: black;
+  opacity: 0.3;
 }
