--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,4 +7,25 @@
       class="ipBtn"
     />
   </div>
+  <div class="address-container">
+    <div class="address">
+      <div class="title">IP ADDRESS</div>
+      <div class="data">192.212.174.101</div>
+    </div>
+    <div class="border-left"></div>
+    <div class="address">
+      <div class="title">LOCATION</div>
+      <div class="data">Brooklyn, NY 10001</div>
+    </div>
+    <div class="border-left"></div>
+    <div class="address">
+      <div class="title">TIMEZONE</div>
+      <div class="data">UTC -05:00</div>
+    </div>
+    <div class="border-left"></div>
+    <div class="address">
+      <div class="title">ISP</div>
+      <div class="data">SpaceX Starlink</div>
+    </div>
+  </div>
 </div>
