--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,6 +25,8 @@
   height: 30px;
   padding: 10px 15px;
   border-radius: 10px 0px 0px 10px;
+  font-size: 16px;
+  font-family: "Rubik";
 }
 .ipBtn {
   background-color: black;
@@ -37,11 +39,12 @@
   display: flex;
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
-  bottom: -28%;
+  transform: translate(-50%, 50%);
+  bottom: 0;
   font-family: "Rubik";
   padding: 30px 0px;
   border-radius: 15px;
+  z-index: 1;
 }
 .address {
   padding: 0px 49px 0px 27px;
@@ -62,4 +65,8 @@
   width: 0.1px;
   background: black;
   opacity: 0.3;
+}
+.ipBtn:hover {
+  cursor: pointer;
+  background-color: hsl(0, 0%, 17%);
 }
