--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,31 +1,37 @@
 <div class="header-container">
   <div class="heading">IP Address Tracker</div>
   <div class="title-container">
-    <input type="text" class="ip-address" /><img
+    <input
+      type="text"
+      class="ip-address"
+      [(ngModel)]="ipAddressInput"
+      placeholder="Search for any IP address or domain"
+    /><img
       src="../../assets/icon-arrow.svg"
       alt="icon-arrow"
       class="ipBtn"
+      (click)="onClick()"
     />
   </div>
   <div class="address-container">
     <div class="address">
       <div class="title">IP ADDRESS</div>
-      <div class="data">192.212.174.101</div>
+      <div class="data">{{ ipAddress }}</div>
     </div>
     <div class="border-left"></div>
     <div class="address">
       <div class="title">LOCATION</div>
-      <div class="data">Brooklyn, NY 10001</div>
+      <div class="data">{{ location }}</div>
     </div>
     <div class="border-left"></div>
     <div class="address">
       <div class="title">TIMEZONE</div>
-      <div class="data">UTC -05:00</div>
+      <div class="data">{{ timezone }}</div>
     </div>
     <div class="border-left"></div>
     <div class="address">
       <div class="title">ISP</div>
-      <div class="data">SpaceX Starlink</div>
+      <div class="data">{{ isp }}</div>
     </div>
   </div>
 </div>
